@@ -3,7 +3,7 @@
     <parent>
         <artifactId>legend-engine</artifactId>
         <groupId>org.finos.legend.engine</groupId>
-        <version>3.31.1-SNAPSHOT</version>
+        <version>4.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -82,13 +82,13 @@
 
         <!-- TEST -->
         <dependency>
-            <groupId>org.finos.legend.engine</groupId>
-            <artifactId>legend-engine-xt-relationalStore-test-server</artifactId>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-runtime-java-engine-compiled</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-configuration-external</artifactId>
+            <groupId>org.finos.legend.engine</groupId>
+            <artifactId>legend-engine-xt-relationalStore-test-server</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -106,11 +106,7 @@
             <artifactId>jackson-core</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-code-compiled-tests</artifactId>
-            <scope>test</scope>
-        </dependency>
+
         <!-- TEST -->
     </dependencies>
 
@@ -149,7 +145,7 @@
                         <!-- Without override, surefire configuration would have skipped our integration tests -->
                         <configuration combine.self="override">
                             <useSystemClassLoader>false</useSystemClassLoader>
-                            <argLine>${argLine} -Xmx2g -Xms1g -XX:MaxPermSize=1024m -XX:SoftRefLRUPolicyMSPerMB=1</argLine>
+                            <argLine>${argLine} ${surefire.vm.params}</argLine>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>
                                     ${project.build.directory}/bigquery-simba-driver-jars/conscrypt-openjdk-uber-2.5.1.jar
